--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Converter</string>
     <string name="settings">Settings</string>
+    <string name="general">General</string>
+    <string name="sounds">Sounds</string>
 </resources>
