--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Converter</string>
+    <string name="app_name">Lenght Converter</string>
     <string name="settings">Settings</string>
     <string name="general">General</string>
     <string name="sounds">Sounds</string>
